--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,13 @@
 @media(max-width:1199px){
+    body{
+        width: 100% !important;
+        height: 60%;
+        /* background:none !important; */
+        
+    }
+    .checkbox__custom__oriented{
+        margin-right: 3px;
+    }
     .container{
         max-width: 1100px;
         padding: 0px 20px;
@@ -327,24 +336,31 @@ transition: 0.5s ease-in-out;
     margin: 0px;
 } */
 .resp__search__bar .banner__video{
-    width: 100%;
-	height: 440px;
+    width: 100% !important;
+	min-height: 440px;
     object-fit: cover;
     margin: 0px !important;
     padding: 0px !important;
-    object-position: center;
-    box-sizing: border-box;
+    /* object-position: center; */
+    /* box-sizing: border-box; */
     position: relative;
+}
+main{
+    width: 100%;
 }
 .overlay {
     width: 100%;
-    height: 440px;
+    min-height:162%;
+    line-height: 2;
     position: absolute;
-    top: 0;
+    top: 30px;
     left: 0;
     background-image: linear-gradient(45deg, rgba(0,0,0,.3) 50%, rgba(0,0,0,.7) 50%);
     background-size: 3px 3px;
     z-index: 2;
+  }
+  .overlay2{
+    display: none !important;
   }
   .main__banner__sect__resp__input__field__search__box{
     position: absolute;
@@ -534,7 +550,7 @@ transition: 0.5s ease-in-out;
         color: var(--li-color) !important;
     }
     .gradient h2{
-        font-size: var(--font-size15);
+        font-size: var(--font-size13);
     }
     .fa-clock,.fa-key,.fa-city,.fa-location-dot{
         font-size: var(--font-size50);
@@ -545,7 +561,19 @@ transition: 0.5s ease-in-out;
     .Real__estate__properties__dubai .fig-img .fig-caption .property__bar__option p{
         font-size: var(--font-size14);
     }
-    
+    .resp__search__bar .banner__video{
+        height: 420px;
+    }
+    .input__search__circle{
+        top: -38%;
+    }
+    .overlay{
+        min-height: 113%;
+    }
+    body{
+        height: 54%;
+    }
+
     
 }
 @media(max-width:992px){
@@ -557,6 +585,9 @@ transition: 0.5s ease-in-out;
         text-align: left;
         color: var(--li-color);
         font-size: var(--font-size17);
+    }
+    .input__search__circle{
+        top: -28%;
     }
     .bottomline button{
         padding: 5px 10px !important;
@@ -629,7 +660,7 @@ transition: 0.5s ease-in-out;
        } */
      .font-predict{
         position: absolute;
-        top: 49%;
+        top: 68%;
         left: 20px;
         z-index: 1;
        }
@@ -645,6 +676,13 @@ transition: 0.5s ease-in-out;
       
     .gradient h2{
     font-size:var(--font-size12)!important;
+       }
+       .bottomline__search__box input{
+        text-indent: 60px;
+        padding-top: 5px;
+       }
+       .input__search__circle{
+        top: -41%;
        }
 }
 @media(max-width:768px){
@@ -759,7 +797,10 @@ transition: 0.5s ease-in-out;
         transition: 0.5s ease-in-out;
     }
     .h2-set{
-        font-size: var(--font-size28) !important;
+        font-size: var(--font-size24) !important;
+    }
+    .main__banner__sect__resp__input__field__search__box h2{
+        font-size: var(--font-size26);
     }
     .video__part, .article__part{
         width: 133px;
@@ -824,7 +865,28 @@ transition: 0.5s ease-in-out;
     .gradient h2{
         font-size:var(--font-size15)!important;
     }
- 
+    .bottomline__search__box input{
+        width: 500px;
+    }
+    .bottomline__search__input__box{
+        width: 520px;
+    }
+    .bottomline__search__box input{
+        text-indent: 30px;
+    }
+    .font-predict{
+        top: 68%;
+    }
+    .input__search__circle{
+        width: 33px;
+        height: 34px;
+    }
+    .overlay {
+        min-height: 150%;
+    }
+    .resp__search__anchor__list ul li a{
+        font-size:var(--font-size13);
+    }
 }
 
 @media(max-width:576px){
